--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "md/deep"]
 	path = deep
 	url = git@github:ichiroprogrammer/deep_cpp.git
+[submodule "md_gen"]
+	path = md_gen
+	url = git@github.com:ichiroprogrammer/md_gen
